4. Node JS Proxy Server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsproxy
spec:
  ports:
  - port: 80
    targetPort: 3128
  selector:
    app: nodejsproxy
