4. Node JS Proxy Server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  nodejsproxy-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - nodejsproxy.vaayadi.in
    secretName: nodejsproxy.vaayadi.in
  rules:
  - host: nodejsproxy.vaayadi.in
    http:
      paths:
      - backend:
          serviceName: nodejsproxy
          servicePort: 80
